# Django_hw

./: README.md  main.py  pyproject.toml
html/: Category.html  contact.html  main.html
src/: config.py
