[tool.poetry]
name = "homework 21-1-django"
version = "0.1.0"
description = ""
authors = ["Aleksander <sanya.slepow2015@yandex.ru>"]
readme = "README.md"
packages = [{include = "homework 21"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
